--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1>Anime Library</h1>
+      <h1>Do use it</h1>
     </header>
     <nav>
       <a href="#">Home</a>
